修改测试代码

--- a/t/t.html
+++ b/t/t.html
@@ -12,8 +12,8 @@ ws0.onclose = function(e) {
 ws0.onerror = function(e) {
 　　console.log(e);
 }
-//进入房间
-//ws0.send('{"type":2,"sub_type":0,"chat":"","player_current":1,"player_turn":0,"pokers":null,"table_index":0,"table_position_index":1,"data":{"0":[null,null,null,null],"1":[null,null,null,null],"2":[null,null,null,null]}}');
 //坐到座位
+//ws0.send('{"type":2,"sub_type":0,"chat":"","player_current":1,"player_turn":0,"pokers":null,"table_index":0,"table_position_index":1,"data":{"0":[null,null,null,null],"1":[null,null,null,null],"2":[null,null,null,null]}}');
+//已示意准备打牌
 //ws0.send('{"type":2,"sub_type":1,"chat":"","player_current":1,"player_turn":0,"pokers":null,"table_index":0,"table_position_index":1}');
 </script>
