player 转 json 修改

--- a/t/t.html
+++ b/t/t.html
@@ -13,7 +13,7 @@ ws0.onerror = function(e) {
 　　console.log(e);
 }
 //坐到座位
-//ws0.send('{"type":2,"sub_type":0,"chat":"","player_current":1,"player_turn":0,"pokers":null,"table_index":0,"table_position_index":1,"data":{"0":[null,null,null,null],"1":[null,null,null,null],"2":[null,null,null,null]}}');
+//ws0.send('{"type":2,"sub_type":0,"chat":"","player_current":0,"player_turn":0,"pokers":null,"table_index":0,"table_position_index":1}');
 //已示意准备打牌
 //ws0.send('{"type":2,"sub_type":1,"chat":"","player_current":1,"player_turn":0,"pokers":null,"table_index":0,"table_position_index":1}');
 </script>
