--- a/t/t.html
+++ b/t/t.html
@@ -17,5 +17,5 @@ ws0.onerror = function(e) {
 //已示意准备打牌
 //ws0.send('{"type":2,"sub_type":1,"chat":"","player_current":1,"player_turn":0,"pokers":null,"table_index":0,"table_position_index":1}');
 //出牌
-//ws0.send('{"type":2,"sub_type":4,"player_current":0,"pokers":[{"type":1,"value":3}]}');
+//ws0.send('{"type":2,"sub_type":4,"pokers":[{"type":1,"value":3}]}');
 </script>
