--- a/t/t.html
+++ b/t/t.html
@@ -13,9 +13,9 @@ ws0.onerror = function(e) {
 　　console.log(e);
 }
 //坐到座位
-//ws0.send('{"type":2,"sub_type":0,"chat":"","player_current":0,"player_turn":0,"pokers":null,"table_index":0,"table_position_index":1}');
+//ws0.send('{"type":2,"sub_type":0,"chat":"","player_current":1,"table_index":0,"table_position_index":1}');
 //已示意准备打牌
-//ws0.send('{"type":2,"sub_type":1,"chat":"","player_current":1,"player_turn":0,"pokers":null,"table_index":0,"table_position_index":1}');
+//ws0.send('{"type":2,"sub_type":1,"chat":"","player_current":1,"table_index":0,"table_position_index":1}');
 //出牌
 //ws0.send('{"type":2,"sub_type":4,"pokers":[{"type":1,"value":3}]}');
 </script>
